[package]
name = "southeast-nacos"
version = "0.1.0"
edition = "2021"
authors = ["Rollp0x <zkrollp@gmail.com>"]
description = "A Rust library for retrieving configuration from Nacos with AWS KMS integration"
repository = "https://github.com/Rollp0x/southeast-nacos"
documentation = "https://docs.rs/southeast-nacos"
readme = "README.md"
keywords = ["nacos", "configuration", "aws", "kms", "alibaba"]
categories = ["config", "api-bindings", "authentication"]
license = "MIT OR Apache-2.0"

[features]
full = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.0"
rust-crypto = "0.2.36"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"]}
aws-sdk-kms = {version = "1.40.0"}
nacos-sdk = { version = "0.4", features = ["default"]}

